# hermes-mempalace-mcporter

./: LICENSE  README.md  deploy.sh  pyproject.toml
plugin/: __init__.py  client.py  plugin.yaml
tests/: conftest.py  test_client.py  test_helpers.py  test_provider.py
