[project]
name = "hermes-mempalace-mcp"
version = "0.1.0"
description = "Hermes MemoryProvider plugin routing to MemPalace via mcporter + mcphub"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
